@@ -8,3 +8,4 @@
 *.cmx[as]
 *.cmti
 *.annot
+src/META
